# midjourney-python-api

./: .gitignore  README.md  README.zh_CN.md  README_CN.md  client.py  config.example.py  example.py  main.py  midjounery.py  midjounery_manager.py  pyproject.toml  requirements.txt  start.sh  test.py
.github/: FUNDING.yml
midjourney/: Midjourney.py
