[tool.poetry]
name = "midjounery-python-sdk"
version = "0.1.0"
description = "Python client for the unofficial MidJourney API."
authors = ["ezioruan <ezioruan@gmail.com>"]
readme = "README.md"
packages = [{include = "midjounery_python_sdk"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
